# spacetraders

./: .gitignore  Cargo.toml  Dockerfile  SpaceTraders.json  justfile  skaffold.yaml
.sqlx/: query-7f589cc8d091b588eb9e5f38e7e6711119af6e36f81a4b9cff95ba2b33a3247c.json  query-a9fc3d31f4f036b5c48561033358fc1e2f79016146fe5d5ace18f7cd765fa7c9.json  query-ca6cb4b8762a6b9b5b7eb709bbf3a28b2f3aafa170ca482bfb6309875dc51b37.json
agent/: Cargo.toml
agent/src/: fetch_one.sql  insert_one.sql  lib.rs
api/: Cargo.toml
api/src/: lib.rs  register.rs  status.rs
cli/: Cargo.toml
cli/src/: main.rs
commander/: Cargo.toml
commander/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs  models.rs
common/src/crds/: mod.rs
common/src/machines/: mod.rs  travel_machine.rs
common/src/models/: agent.rs  contract.rs  faction.rs  location.rs  mod.rs  ship.rs
common/src/repository/: mod.rs
common/src/repository/entities/: waypoint.rs
k8s/: deployment.yaml  k3d.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20240105_000001_create_table.rs
migrations/: 20240308221346_create_agent_table.down.sql  20240308221346_create_agent_table.up.sql  20240309204103_create_waypoint_table.down.sql  20240309204103_create_waypoint_table.up.sql
navigation/: Cargo.toml
navigation/src/: insert_waypoint.sql  lib.rs  location.rs  waypoint.rs  waypoint_trait.rs  waypoint_type.rs
openapi/: Cargo.toml  README.md
openapi/.openapi-generator/: FILES
openapi/docs/: ActivityLevel.md  AgentsApi.md  Construction.md  ConstructionMaterial.md  Faction.md  FactionSymbol.md  FactionTrait.md  FactionTraitSymbol.md  FleetApi.md  GetAgents200Response.md  GetConstruction200Response.md  GetStatus200Response.md  GetSystemWaypointsTraitsParameter.md  JumpShip200ResponseData.md  MarketTradeGood.md  RegisterRequest.md  ScannedWaypoint.md  Ship.md  ShipCargoItem.md  ShipNav.md  ShipNavRoute.md  ShipNavRouteWaypoint.md  Shipyard.md  ShipyardShip.md  ShipyardShipTypesInner.md  Siphon.md  SiphonResources201Response.md  SiphonResources201ResponseData.md  SiphonYield.md  SupplyConstruction201Response.md  SupplyConstruction201ResponseData.md  SupplyLevel.md  Survey.md  System.md  SystemFaction.md  SystemWaypoint.md  SystemsApi.md  Waypoint.md  WaypointFaction.md  WaypointModifier.md  (+3 more)
openapi/src/apis/: agents_api.rs  configuration.rs  contracts_api.rs  default_api.rs  factions_api.rs  fleet_api.rs  mod.rs  systems_api.rs
openapi/src/models/: accept_contract_200_response.rs  accept_contract_200_response_data.rs  activity_level.rs  agent.rs  chart.rs  construction.rs  construction_material.rs  contract.rs  contract_deliver_good.rs  contract_payment.rs  contract_terms.rs  cooldown.rs  create_chart_201_response.rs  create_chart_201_response_data.rs  create_ship_ship_scan_201_response.rs  create_ship_ship_scan_201_response_data.rs  create_ship_system_scan_201_response.rs  create_ship_system_scan_201_response_data.rs  create_ship_waypoint_scan_201_response.rs  create_ship_waypoint_scan_201_response_data.rs  create_survey_201_response.rs  create_survey_201_response_data.rs  deliver_contract_200_response.rs  deliver_contract_200_response_data.rs  deliver_contract_request.rs  dock_ship_200_response.rs  extract_resources_201_response.rs  extract_resources_201_response_data.rs  extract_resources_request.rs  extraction.rs  extraction_yield.rs  faction.rs  faction_symbol.rs  faction_trait.rs  faction_trait_symbol.rs  fulfill_contract_200_response.rs  get_agents_200_response.rs  get_construction_200_response.rs  get_contract_200_response.rs  get_contracts_200_response.rs  (+128 more)
operator/: Cargo.toml
operator/src/: agent.rs  lib.rs  manager.rs  reconcile.rs  ship.rs
repository/: Cargo.toml
repository/src/: lib.rs
repository/src/entities/: mod.rs  prelude.rs  waypoint.rs
