[workspace]
resolver = "2"

default-members = ["cli"]
members = ["cli", "openapi"]

[workspace.package]
authors = ["Reid Hansen"]
version = "0.1.0"
edition = "2021"


[workspace.dependencies]
clap = { version = "4.4.11", features = ["derive", "env", "string"] }
color-eyre = "0.6.2"
eyre = "0.6.11"
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "^1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8.8"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
