[workspace]
resolver = "2"

default-members = ["cli"]
members = ["cli", "common", "migration", "openapi", "operator"]

[workspace.package]
authors = ["Reid Hansen"]
version = "0.1.0"
edition = "2021"


[workspace.dependencies]
clap = { version = "4.4.11", features = ["derive", "env", "string"] }
color-eyre = "0.6.2"
eyre = "0.6.11"
futures = "0.3.28"
governor = "0.6.0"
inquire = "0.6.2"
kube = { version = "0.87.2", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["latest"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
schemars = { version = "0.8.16", features = ["chrono"] }
sea-orm = { version = "^0.12.0", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
    "with-time",
    "with-json",
    "with-uuid",
    "mock",
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "^1.0"
serde_json = "1.0"
serde_yaml = "0.9.30"
snafu = "0.8.0"
tabled = "0.15.0"
time = { version = "0.3.31", features = [
    "macros",
    "parsing",
    "serde-well-known",
] }
tokio = { version = "1", features = ["full"] }
toml = "0.8.8"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
