[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
openapi = { path = "../openapi" }
repository = { path = "../repository" }
migration = { path = "../migration" }

clap.workspace = true
color-eyre.workspace = true
eyre.workspace = true
inquire.workspace = true
serde.workspace = true
serde_json.workspace = true
tabled.workspace = true
tokio.workspace = true
toml.workspace = true
