[package]
name = "common"
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapi = { path = "../openapi" }
eyre.workspace = true
serde.workspace = true
tabled.workspace = true
time.workspace = true
