[package]
name = "operator"
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
openapi = { path = "../openapi" }

eyre.workspace = true
futures.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
